--- a/jade/index.jade
+++ b/jade/index.jade
@@ -119,6 +119,47 @@ block content
                                     img(src='img/new7.png')
                                 p Большая секция для<br> разработчиков: практикум по<br> разработке внутри Asterisk и<br> снаружи Asterisk
 
+    .conferenc
+        .inner
+            .top-conf.clearfix
+                .left-conf
+                    ul.clearfix
+                        li
+                            p Около
+                            h2 100
+                            p профессионалов
+                        li
+                            p Около
+                            h2 200
+                            p активных <br>пользователей
+                .right-conf
+                    .title-go.title-go-all
+                        h2 О конференции
+
+                    p Ежегодная конференция по Asterisk - важное и ожидаемое мероприятие для всех, кто связан с Asterisk в нашей стране. На одной площадке мы собираем около 100 профессионалов и около 200 активных пользователей системы. На конференции вы не только узнаете много нового и полезного о мире Asterisk, но и сможете обрести новые знакомства и связи с единомышленниками.
+            .slider-conf
+                .arrow-slider.clearfix
+                    .left-arrow
+                        a(href="#")
+                    .right-arrow
+                        a(href="#")
+                ul(id="adaptive").clearfix
+                    li
+                        .left-slider-text
+                            h2  Главная ценность<br> конференции - ее<br> участники
+                            p  Именно вы определяете значимость и статус мероприятия. На нашей<br> площадке собираются несколько сотен специалистов, с которыми можно<br> пообщаться за чашкой кофе в перерывах между докладами. Именно в таком<br> формате появляются самые полезные знакомства, которые неизбежно<br> приводят к новым проектам, стартапам и интрересным разработкам.
+                            .border-bottom
+                        .right-slider-img
+                            img(src="img/conf.jpg")
+
+                    li
+                        .left-slider-text
+                            h2  Главная ценность<br> конференции - ее<br> участники
+                            p  Именно вы определяете значимость и статус мероприятия. На нашей<br> площадке собираются несколько сотен специалистов, с которыми можно<br> пообщаться за чашкой кофе в перерывах между докладами. Именно в таком<br> формате появляются самые полезные знакомства, которые неизбежно<br> приводят к новым проектам, стартапам и интрересным разработкам.
+                            .border-bottom
+                        .right-slider-img
+                            img(src="img/conf.jpg")
+
     .organize
         .inner
             .container-fluid
@@ -143,4 +184,33 @@ block content
                                     img(src="img/p3.jpg")
                                    li
                                     img(src="img/p4.jpg")
+    .choice
+        .inner
+            .container-fluid
+                .row
+                    .col-xs-12
+                        .title-go.title-go-all
+                            h2  Вы решаете, какой будет конференция
+                            p бла, бла, бла
 
+                        .beer-time
+                            h2  Должен ли вечер первого дня<br> закончиться пивом?
+                            .midle-beer
+                                img(src='img/beer.png')
+                                .left-yes
+                                    h2 да
+                                    label
+                                        input(class='checkbox' type="checkbox"  name="check")
+                                        span.checkbox-custom
+                                .right-no
+                                    h2 нет
+                                    label
+                                        input(class='checkbox' type="checkbox"  name="check")
+                                        span.checkbox-custom
+                        .buttons-beer
+                            ul
+                                li
+                                    a(href='#') Дальше
+
+                                li
+                                    a(href='#') Пропустить
