--- a/jade/index.jade
+++ b/jade/index.jade
@@ -214,3 +214,30 @@ block content
 
                                 li
                                     a(href='#') Пропустить
+    .feast
+        .inner
+            .title-go.title-go-all
+                h2 Завершительный<br> банкет
+            .slider-conf
+                .arrow-slider.clearfix
+                    .left-arrow
+                        a(href="#")
+                    .right-arrow
+                        a(href="#")
+                ul(id="feast").clearfix
+                    li
+                        .left-slider-text
+                            p  Наша конференция заканчивается всегда банкетом, она<br> проходит (бла, бла, бла.)
+                            p Enter a quote from the document or a brief description of an interesting event. The caption can be placed anywhere in the document. To change the formatting of an inscription containing catchy citations, use the Drawing Tools tab
+                            .border-bottom
+                        .right-slider-img
+                            img(src="img/feast.jpg")
+
+                    li
+                        .left-slider-text
+                            p  Наша конференция заканчивается всегда банкетом, она<br> проходит (бла, бла, бла.)
+                            p Enter a quote from the document or a brief description of an interesting event. The caption can be placed anywhere in the document. To change the formatting of an inscription containing catchy citations, use the Drawing Tools tab
+                            .border-bottom
+                        .right-slider-img
+                            img(src="img/feast.jpg")
+
